...
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/title_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Title"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
...
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="@id/tv_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"/>

    <TextView
        android:id="@+id/desc_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp"
...
