<resources>
    <string name="app_name">Submission 1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="overview">Overview</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv_show">Detail Tv Show</string>

</resources>
